2003-11-19  Mike Kestner  <mkestner@ximian.com>

	* parser/gapi_pp.pl : handle files and dirs in ARGV.
	* parser/gapi2xml.pl : deal with struct keyword in param decls
	* parser/gapi-parser : handle <file> elements.

2003-11-18  Mike Kestner  <mkestner@ximian.com>

	* configure.in : tagged for 0.14 and bumping VERSION.

2003-11-18  Mike Kestner  <mkestner@ximian.com>

	* gtkhtml/Makefile.in : make the install target conditional too.

2003-11-18  Moritz Balz  <verteiler@mbalz.de>

	* gdk/Window.custom : remove Visible and Viewable since the Is*
	methods are now gen'd as properties.

2003-11-18  Mike Kestner  <mkestner@ximian.com>

	* pango/Pango.metadata : mark ref params on LayoutLine.GetExtents
	and GetPixelExtents.  [Fixes #50338]
	* pango/pango-api.xml : regenerated.

2003-11-18  Peter Williams  <peter@newton.cx>

 	* gtk/NodeStore.cs (GetNode): New public function. Patch refactored
	a bit to eliminate code duplication with get_node_cb.
 
2003-11-18  John Luke  <jluke@cfl.rr.com>
	
	* configure.in: test for gtkhtml3
	* gtkhtml/Makefile.in: build conditionally

2003-11-18  Mike Kestner  <mkestner@ximian.com>

	* gdk/Pixbuf.custom : resurrect the stream/resource ctors. rename
	LoadResource to LoadFromResource for the string overload.
	* gdk/PixbufLoader.custom: add an internal prop to get an unwrapped
	pixbuf handle.

2003-11-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* gdk/Pixbuf.custom:
	(LoadResource (assembly, resource)): a null assembly uses the calling
	assembly.

2003-11-17  Ettore Perazzoli  <ettore@ximian.com>

	* gdk/Pixbuf.custom: Removed the Assembly constructors.
	(Pixbuf.LoadResource (string)): New.
	(Pixbuf.LoadResource (Assembly, string)): New.

2003-11-16  Mike Kestner  <mkestner@ximian.com>

	* generator/Parameters: handle array+len param pairs.
	* gtk/Gtk.metadata : unhide DestDefaults and mark targets param of
	drag_dest_set as array.
	* gtk/gtk-api.xml : regenerate

2003-11-14  Mike Kestner  <mkestner@ximian.com>
