@@ -2214,7 +2214,7 @@
       <method name="SetWithData" cname="gtk_clipboard_set_with_data">
         <return-type type="gboolean" />
         <parameters>
-          <parameter type="const-GtkTargetEntry*" name="targets" />
+          <parameter type="const-GtkTargetEntry*" name="targets" array="1" />
           <parameter type="guint" name="n_targets" />
           <parameter type="GtkClipboardGetFunc" name="get_func" />
           <parameter type="GtkClipboardClearFunc" name="clear_func" />
@@ -2224,7 +2224,7 @@
       <method name="SetWithOwner" cname="gtk_clipboard_set_with_owner">
         <return-type type="gboolean" />
         <parameters>
-          <parameter type="const-GtkTargetEntry*" name="targets" />
+          <parameter type="const-GtkTargetEntry*" name="targets" array="1" />
           <parameter type="guint" name="n_targets" />
           <parameter type="GtkClipboardGetFunc" name="get_func" />
           <parameter type="GtkClipboardClearFunc" name="clear_func" />
@@ -8664,7 +8664,7 @@
       <method name="EnableModelDragDest" cname="gtk_tree_view_enable_model_drag_dest">
         <return-type type="void" />
         <parameters>
-          <parameter type="const-GtkTargetEntry*" name="targets" />
+          <parameter type="const-GtkTargetEntry*" name="targets" array="1" />
           <parameter type="gint" name="n_targets" />
           <parameter type="GdkDragAction" name="actions" />
         </parameters>
@@ -8673,7 +8673,7 @@
         <return-type type="void" />
         <parameters>
           <parameter type="GdkModifierType" name="start_button_mask" />
-          <parameter type="const-GtkTargetEntry*" name="targets" />
+          <parameter type="const-GtkTargetEntry*" name="targets" array="1" />
           <parameter type="gint" name="n_targets" />
           <parameter type="GdkDragAction" name="actions" />
         </parameters>
