@@ -1,3 +1,8 @@
+2003-11-19  Peter Williams  <peter@newton.cx>
+ 
+ 	* gtk/Gtk.metadata: Add some array attributes for some "type *elem, 
+ 	int n_elem" array params.
+ 
 2003-11-19  Mike Kestner  <mkestner@ximian.com>
 
 	* parser/gapi_pp.pl : handle files and dirs in ARGV.
